<resources>
    <string name="app_name">News</string>

    <!-- Text to display in the list when there are no articles [CHAR LIMIT=NONE] -->
    <string name="no_articles">No articles found.</string>
    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Articles Settings</string>

    <!-- Strings For Topic Preference [CHAR LIMIT=30] -->
    <string name="settings_topic_label">Topic</string>
    <string name="settings_topic_key" translatable="false">sectionId</string>
    <string name="settings_topic_default" translatable="false">world</string>


    <!-- Label for sectionId world option [CHAR LIMIT=20] -->
    <string name="settings_sectionId_world_label">World news</string>
    <string name="settings_sectionId_world_value" translatable="false">world</string>

    <!-- Label for sectionId football option [CHAR LIMIT=20] -->
    <string name="settings_sectionId_football_label">Football</string>
    <string name="settings_sectionId_football_value" translatable="false">football</string>

    <!-- Label for sectionId tennis option [CHAR LIMIT=20] -->
    <string name="settings_sectionId_tennis_label">Tennis</string>
    <string name="settings_sectionId_tennis_value" translatable="false">sport/tennis</string>

    <!-- Label for sectionId formulaone option [CHAR LIMIT=20] -->
    <string name="settings_sectionId_formulaone_label">F1</string>
    <string name="settings_sectionId_formulaone_value" translatable="false">sport/formulaone</string>

    <!-- Label for sectionId music option [CHAR LIMIT=20] -->
    <string name="settings_sectionId_music_label">Music</string>
    <string name="settings_sectionId_music_value" translatable="false">music</string>

    <!-- Label for sectionId games option [CHAR LIMIT=20] -->
    <string name="settings_sectionId_games_label">Games</string>
    <string name="settings_sectionId_games_value" translatable="false">games</string>

    <!-- Label for sectionId fashion option [CHAR LIMIT=20] -->
    <string name="settings_sectionId_fashion_label">Fashion</string>
    <string name="settings_sectionId_fashion_value" translatable="false">fashion</string>

    <!-- Label for sectionId food option [CHAR LIMIT=20] -->
    <string name="settings_sectionId_food_label">Food</string>
    <string name="settings_sectionId_food_value" translatable="false">food</string>

    <!-- Label for sectionId women option [CHAR LIMIT=20] -->
    <string name="settings_sectionId_women_label">Women</string>
    <string name="settings_sectionId_women_value" translatable="false">lifeandstyle/women</string>

    <!-- Label for sectionId health-and-wellbeing option [CHAR LIMIT=20] -->
    <string name="settings_sectionId_health_and_wellbeing_label">Health &amp; fitness</string>
    <string name="settings_sectionId_health_and_wellbeing_value" translatable="false">lifeandstyle/health-and-wellbeing</string>

    <!-- Label for sectionId business option [CHAR LIMIT=20] -->
    <string name="settings_sectionId_business_label">Business</string>
    <string name="settings_sectionId_business_value" translatable="false">uk/business</string>

    <!-- Label for sectionId global-development option [CHAR LIMIT=20] -->
    <string name="settings_sectionId_global_development_label">Global development</string>
    <string name="settings_sectionId_global_development_value" translatable="false">global-development</string>


    <!-- Strings For Page Size Preference [CHAR LIMIT=30] -->
    <string name="settings_page_size_label">Display items per page</string>
    <string name="settings_page_size_key" translatable="false">page-size</string>
    <string name="settings_page_size_default" translatable="false">10</string>


    <!-- Label for page_size ten option [CHAR LIMIT=20] -->
    <string name="settings_page_size_ten_label">10</string>
    <string name="settings_page_size_ten_value" translatable="false">10</string>

    <!-- Label for page_size twenty five option [CHAR LIMIT=20] -->
    <string name="settings_page_size_twenty_five_label">25</string>
    <string name="settings_page_size_twenty_five_value" translatable="false">25</string>

    <!-- Label for page_size fifty option [CHAR LIMIT=20] -->
    <string name="settings_page_size_fifty_label">50</string>
    <string name="settings_page_size_fifty_value" translatable="false">50</string>

    <!-- Label for page_size one hundred option [CHAR LIMIT=20] -->
    <string name="settings_page_size_one_hundred_label">100</string>
    <string name="settings_page_size_one_hundred_value" translatable="false">100</string>


    <!-- Strings For Order by Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order-by</string>
    <string name="settings_order_by_default" translatable="false">newest</string>


    <!-- Label for order_by newest option [CHAR LIMIT=20] -->
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <!-- Label for order_by oldest option [CHAR LIMIT=20] -->
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <!-- Label for order_by relevance option [CHAR LIMIT=20] -->
    <string name="settings_order_by_relevance_label">Most Relevant</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>


    <!-- Strings For Maximum number of Pages Preference [CHAR LIMIT=30] -->
    <string name="settings_max_pages_label">Maximum number of pages</string>
    <string name="settings_max_pages_key" translatable="false">max-pages</string>
    <string name="settings_max_pages_default" translatable="false">5</string>


    <!-- Label for max_pages five option [CHAR LIMIT=20] -->
    <string name="settings_max_pages_five_label">5</string>
    <string name="settings_max_pages_five_value" translatable="false">5</string>

    <!-- Label for max_pages ten option [CHAR LIMIT=20] -->
    <string name="settings_max_pages_ten_label">10</string>
    <string name="settings_max_pages_ten_value" translatable="false">10</string>

    <!-- Label for max_pages fifteen option [CHAR LIMIT=20] -->
    <string name="settings_max_pages_fifteen_label">15</string>
    <string name="settings_max_pages_fifteen_value" translatable="false">15</string>

    <!-- Label for max_pages all option [CHAR LIMIT=20] -->
    <string name="settings_max_pages_all_label">all</string>
    <string name="settings_max_pages_all_value" translatable="false">all</string>

    <!-- String values for Page Navigation -->
    <string name="page_text">Page</string>
    <string name="of_text">of</string>


    <!-- String values for Date Navigation -->
    <string name="from_text">From</string>
    <string name="to_text">to</string>

</resources>
